[package]
name = "agile_octopus"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws_lambda_events = { version = "0", default-features = false, features = ["eventbridge"] }
aws-sdk-sns = { version =  "1", default-features = false, features = ["rustls"] }
chrono = { version = "0", default-features = false }
chrono-tz = { version = "0", default-features = false }
lambda_runtime = { version = "0", default-features = false, features = ["tracing"] }
reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }

[profile.release]
codegen-units = 1
lto = true
